--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,94 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+@keyframes scaling {
+    from {
+        scale:1;
+    }
+    to {
+        scale: 1.5;
+    }
+}
+
+@keyframes sparkling {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.like-icon .heart {
+    transform-origin: center;
+}
+
+.like-icon.is-liked .heart {
+    animation: scaling 0.3s 0.1s ease-in;
+    /* fill:var(--heart-bg-color, red); */
+}
+
+
+.like-icon.is-liked .core{
+    fill:var(--heart-bg-color, red);
+    transition: fill 0.3s linear;
+}
+
+.like-icon:active .main-body {
+    fill: var(--heart-bg-color, red);
+    transition: fill 0.3s 0.05s linear;
+}
+.like-icon:active .core {
+    fill: var(--heart-bg-color, red);
+    transition: fill 0.3s linear ;
+}
+.like-icon.is-liked .contour {
+    /* --contour-bg-color: var(--heart-bg-color, red);  */
+    fill: var(--heart-bg-color,red);
+    transition: fill 0.3s 0.06s linear ;
+}
+
+.like-icon:not(.is-liked) .contour {
+    fill: var(--contour-bg-color, #000);
+    transition: fill 0.1s linear;
+}
+
+.like-icon.is-liked .main-body{
+    fill:var(--heart-bg-color, red);
+    transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon:hover .main-body {
+    /* fill: var(--accent-color, #000); */
+    fill: var(--accent-color, #000);
+    transition: fill 0.3s 0.05s linear;
+}
+.like-icon .sparks {
+    opacity: 0;
+  }
+
+.like-icon.is-liked .sparks {
+    animation: sparkling 0.3s 0.3s ease-in;
+}
+  
+  .like-icon .core {
+    fill: transparent;
+    transition: fill 0.3s 0.03s linear ;
+  }
+  
+  .like-icon .contour {
+    transition: fill 0.1s linear;
+    /* fill:var(--contour-bg-color, #000);
+    --contour-bg-color: var(--accent-color,#000);  */
+  }
+  
+  .like-icon .main-body{
+    fill: transparent;
+    transition: fill 0.3s linear;
+  }
+
+
+  .like-icon:hover .core {
+    fill: var(--accent-color, #000);
+    transition: fill 0.3s linear;
+  }
