--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
 
 .page {
   min-inline-size: 320px;
-  min-block-size: 100dvb;
+  /* min-block-size: 100dvb; */
 
   color: var(--accent-color, #000);
 
@@ -29,27 +29,23 @@
   align-items: center;
   justify-content: center;
 
-  margin-bottom: 100px;
+  /* margin-bottom: 100px; */
 }
 
 .header {
-  block-size: fit-content;
+  /* block-size: fit-content; */
   max-inline-size: 700px;
   inline-size: clamp(23.4375rem, 16.3732rem + 30.1408vw, 43.5rem);
-
   font-family: var(--press-head-font-family), fantasy, sans-serif;
   font-weight: var(--main-font-weight, 400);
   text-align: center;
-
   display: flex;
   flex-direction: column;
   align-content: center;
   justify-content: center;
   gap: 20px;
-
   background-color: var(--bg-color, #fff);
   color: var(--accent-color);
-
   border: 2px solid var(--accent-color);
 }
 
@@ -72,7 +68,7 @@
 
 .content {
   inline-size: clamp(23.4375rem, 16.3732rem + 30.1408vw, 43.5rem);
-  block-size: 100vh;
+  /* block-size: 100vh; */
   display: grid;
   grid-template-columns: 1fr;
   place-items: center;
@@ -93,7 +89,7 @@
 }
 
 .info {
-  block-size: fit-content;
+  /* block-size: fit-content; */
   justify-content: center;
   align-items: start;
   display: flex;
@@ -107,7 +103,7 @@
   padding: 25px;
   line-height: 1.17;
   inline-size: 100%;
-  block-size: fit-content;
+  /* block-size: fit-content; */
 }
 
 .info__text {
@@ -127,7 +123,7 @@
 .info__image {
   position: relative;
   inline-size: 100%;
-  block-size: fit-content;
+  /* block-size: fit-content; */
   border-top: 2px solid var(--accent-color);
   border-bottom: 2px solid var(--accent-color);
 }
@@ -311,7 +307,7 @@
   transition:
     opacity 0.5s ease-out,
     transform 0.45s 0.05s linear;
-  max-inline-size: 341px; 
+  max-inline-size: 341px;
   inline-size: 100%;
 }
 
@@ -355,7 +351,7 @@
 .dialog-text {
   font-family: var(--press-head-font-family), fantasy, sans-serif;
   font-weight: var(--main-font-weight, 400);
-  font-size: var(--main-font-size, 14px);
+  font-size: var(--head-font-size, 14px);
   line-height: 150%;
   letter-spacing: 0;
   text-transform: uppercase;
@@ -430,8 +426,7 @@
     inset-inline-end: 25px;
   }
 
-  .info__paragraph-block{
+  .info__paragraph-block {
     padding: 30px 25px 25px 25px;
   }
-  
 }
